--- a/HTML-CSS-JS/contactus.css
+++ b/HTML-CSS-JS/contactus.css
@@ -27,8 +27,6 @@ label {
     text-align: right;
 }
 
-h1 {
-    font-family: 'Ubuntu', Helvetica, sans-serif;
-    font-size: 40px;
-    text-align: center;
+.form-btn {
+    padding-left: 90px;
 }
